Fixed imaging issues
There were issues where the images were not showing up in the HTML index

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body
 
 #jumbo
 {
-    background-image: url("/EmployeePics/books.jpg");
+    background-image: url('../images/books.jpg');
     background-position: center center;
     min-height: 300px;
     text-align: center;
